2000-07-10  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Coding Style): Some more constraints :).

2000-07-10  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_FUNC_STRERROR_R): Aaaaaaarg!  Don't leave the
	AC_DEFINE inside the AC_CACHE_CHECK.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_FUNC_STAT, AC_FUNC_STAT, AC_FUNC_LSTAT): New
	macros, from Jim's stat.m4 and lstat.m4 serial 6.
	* doc/autoconf.texi (Particular Functions): Document
	* acfunctions: Add them.

2000-07-10  Akim Demaille  <akim@epita.fr>

	AC_LIBOBJ when used by AC_REPLACE_FUNCS should not complain for
	variables as argument.

	* acgeneral.m4 (_AC_LIBOBJ): Same as the former AC_LIBOBJ, but
	takes an additional argument: action to perform when non-literal
	argument.
	(AC_LIBOBJ): Use it.
	(AC_REPLACE_FUNCS): Use _AC_LIBOBJ, not AC_LIBOBJ.

2000-07-10  Akim Demaille  <akim@epita.fr>

	LANGUAGE should be neutralized too.

	* acgeneral.m4 (_AC_INIT_PREPARE_ENVIRONMENT): Do it.
	* doc/autoconf.texi (Special Shell Variables): Mention it.

2000-07-10  Akim Demaille  <akim@epita.fr>

	Set autoconf's default warnings to `syntax'.

	In fact, honor the most recent specification in the concatenation
	of `syntax',$WARNINGS,<options> in that order.
	Implement support for `none' and `noCATEGORY' so that the options
	may override the previous choices.
	Suggested by Didier Verna.

	* acgeneral.m4 (_AC_WARNING_IFELSE): New macro.
	(AC_WARNING_IFELSE): Use this macro to implement the new specs.
	(AC_WARNING): The empty category must not be used, default to
	`syntax'.
	* doc/autoconf.texi (autoconf Invocation, Reporting Messages): Adjust.
	* autoconf.sh: Adjust.
	Use `optarg' to fetch the arguments of options.
	Fix a bug in the handling of `--trace='.

	* acgeneral.m4 (AC_CACHE_VAL): Typo: the macro was complaining iff
	it shouldn't have.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoreconf.sh (--install, --symlink): New options.

2000-07-10  Akim Demaille  <akim@epita.fr>
